--- a/FinancialAnalyticsProcessor.Infrastructure/FinancialAnalyticsProcessor.Infrastructure.csproj
+++ b/FinancialAnalyticsProcessor.Infrastructure/FinancialAnalyticsProcessor.Infrastructure.csproj
@@ -7,10 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Services\" />
-  </ItemGroup>
-
-  <ItemGroup>
+    <PackageReference Include="CsvHelper" Version="33.0.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.11" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.11">
       <PrivateAssets>all</PrivateAssets>
@@ -21,6 +18,10 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\FinancialAnalyticsProcessor.Domain\FinancialAnalyticsProcessor.Domain.csproj" />
   </ItemGroup>
 
 </Project>
