created transaction processor application service

--- a/FinancialAnalyticsProcessor.Application/FinancialAnalyticsProcessor.Application.csproj
+++ b/FinancialAnalyticsProcessor.Application/FinancialAnalyticsProcessor.Application.csproj
@@ -7,7 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Services\" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="9.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\FinancialAnalyticsProcessor.Domain\FinancialAnalyticsProcessor.Domain.csproj" />
   </ItemGroup>
 
 </Project>
