Created the transaction job to be used by hangfire

--- a/FinancialAnalyticsProcessor/appsettings.json
+++ b/FinancialAnalyticsProcessor/appsettings.json
@@ -1,6 +1,12 @@
 {
+  "DirectoryPaths": {
+    "InputDirectory": "Data/Input",
+    "OutputDirectory": "Data/Output"
+  },
+
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Database=FinancialDb;Trusted_Connection=True;TrustServerCertificate=True;Encrypt=False;"
+    "DefaultConnection": "Server=localhost;Database=FinancialDb;Trusted_Connection=True;TrustServerCertificate=True;Encrypt=False;",
+    "HangfireConnection": "Server=localhost;Database=FinancialDb;Trusted_Connection=True;TrustServerCertificate=True;Encrypt=False;"
   },
   "Logging": {
     "LogLevel": {
