--- a/FinancialAnalyticsProcessor.Application/FinancialAnalyticsProcessor.Application.csproj
+++ b/FinancialAnalyticsProcessor.Application/FinancialAnalyticsProcessor.Application.csproj
@@ -7,12 +7,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="13.0.1" />
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="9.0.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\FinancialAnalyticsProcessor.Domain\FinancialAnalyticsProcessor.Domain.csproj" />
+    <ProjectReference Include="..\FinancialAnalyticsProcessor.Infrastructure\FinancialAnalyticsProcessor.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
