--- a/FinancialAnalyticsProcessor/FinancialAnalyticsProcessor.csproj
+++ b/FinancialAnalyticsProcessor/FinancialAnalyticsProcessor.csproj
@@ -10,6 +10,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Worker.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="13.0.1" />
+    <PackageReference Include="Hangfire.AspNetCore" Version="1.8.17" />
+    <PackageReference Include="Hangfire.SqlServer" Version="1.8.17" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.0" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.19.6" />
 	  <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.11" />
@@ -22,10 +29,13 @@
 		  <PrivateAssets>all</PrivateAssets>
 		  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 	  </PackageReference>
+	  <PackageReference Include="Serilog.AspNetCore" Version="8.0.3" />
+	  <PackageReference Include="Serilog.Sinks.Console" Version="6.0.0" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\FinancialAnalyticsProcessor.Application\FinancialAnalyticsProcessor.Application.csproj" />
+    <ProjectReference Include="..\FinancialAnalyticsProcessor.Domain\FinancialAnalyticsProcessor.Domain.csproj" />
     <ProjectReference Include="..\FinancialAnalyticsProcessor.Infrastructure\FinancialAnalyticsProcessor.Infrastructure.csproj" />
   </ItemGroup>
 
