--- a/FinancialAnalyticsProcessor/FinancialAnalyticsProcessor.csproj
+++ b/FinancialAnalyticsProcessor/FinancialAnalyticsProcessor.csproj
@@ -15,6 +15,8 @@
 
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="13.0.1" />
+    <PackageReference Include="FluentValidation" Version="11.11.0" />
+    <PackageReference Include="FluentValidation.AspNetCore" Version="11.3.0" />
     <PackageReference Include="Hangfire.AspNetCore" Version="1.8.17" />
     <PackageReference Include="Hangfire.SqlServer" Version="1.8.17" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.0" />
