created poly policy for hangfire job (#9)

--- a/FinancialAnalyticsProcessor/appsettings.json
+++ b/FinancialAnalyticsProcessor/appsettings.json
@@ -1,9 +1,9 @@
 {
-  "DirectoryPaths": {
-    "InputDirectory": "Data/Input",
-    "OutputDirectory": "Data/Output"
+  "JobSchedule": {
+    "IntervalInSeconds": 10,
+    "InputFilePath": "Data/Input/input.csv",
+    "OutputFilePath": "Data/Output/output.json"
   },
-
   "ConnectionStrings": {
     "DefaultConnection": "Server=localhost;Database=FinancialDb;Trusted_Connection=True;TrustServerCertificate=True;Encrypt=False;",
     "HangfireConnection": "Server=localhost;Database=FinancialDb;Trusted_Connection=True;TrustServerCertificate=True;Encrypt=False;"
