--- a/FinancialAnalyticsProcessor/FinancialAnalyticsProcessor.csproj
+++ b/FinancialAnalyticsProcessor/FinancialAnalyticsProcessor.csproj
@@ -31,6 +31,7 @@
 		  <PrivateAssets>all</PrivateAssets>
 		  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 	  </PackageReference>
+	  <PackageReference Include="Polly" Version="8.5.0" />
 	  <PackageReference Include="Serilog.AspNetCore" Version="8.0.3" />
 	  <PackageReference Include="Serilog.Sinks.Console" Version="6.0.0" />
   </ItemGroup>
